# todolist-api

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
src/todo/: conftest.py  settings.py
src/todo/adapters/inbound/rest/: containers.py  factories.py  main.py  settings.py
src/todo/adapters/inbound/rest/tests/: containers.py
src/todo/adapters/inbound/rest/v1/controllers/: healthcheck.py  task.py
src/todo/adapters/inbound/rest/v1/controllers/tests/: conftest.py  test_healthcheck_controller.py  test_task_controller.py
src/todo/adapters/inbound/rest/v1/presenters/: task.py
src/todo/adapters/outbound/db/: database.py  models.py  task_repository.py
src/todo/adapters/outbound/db/tests/: conftest.py  test_task_repository.py
src/todo/domain/entities/: readme.md  task.py
src/todo/domain/exceptions/: base.py  task_exceptions.py
src/todo/domain/ports/inbound/: readme.md
src/todo/domain/ports/inbound/task/: dtos.py  port.py
src/todo/domain/ports/outbound/: readme.md
src/todo/domain/ports/outbound/repository/: exceptions.py  port.py
src/todo/domain/use_cases/: create_task.py  update_task.py
src/todo/domain/use_cases/tests/: conftest.py  test_create_task.py  test_update_task.py
