[tool.poetry]
name = "todo"
version = "0.0.1"
description = ""
authors = [ "O Boticario <you@example.com>" ]

  [tool.poetry.dependencies]
  python = "3.10.*"
  fastapi = "^0.75.2"
  uvicorn = "^0.17.6"
  ujson = "^5.2.0"
  orjson = "^3.6.8"
  redis = "^4.0.2"
  asgiref = "^3.5.0"
  gunicorn = "^20.1.0"
  hypercorn = "^0.13.0"
  dnspython = "^2.2.1"
  requests = "^2.27.1"
  newrelic = "^7.10.0"
  uvloop = "^0.16.0"
  httptools = "^0.4.0"
  celery = "^5.2.6"
  pyhumps = "^3.5.3"
  freezegun = "^1.2.0"
  hiredis = "^2.0.0"
  httpx = "^0.22.0"
  dependency-injector = "^4.39.1"
  sqlmodel = "^0.0.6"
  SQLAlchemy-Utils = "^0.38.3"

    [tool.poetry.dependencies.pydantic]
    version = "^1.8.2"
    extras = [ "dotenv" ]

    [tool.poetry.dependencies.fakeredis]
    version = "^1.6.0"
    extras = [ "lua" ]

  [tool.poetry.dev-dependencies]
  pytest = "^7.1.1"
  black = "^22.3"
  flake8 = "^4.0.1"
  pytest-cov = "^3.0.0"
  pdbpp = "^0.10.3"
  bandit = "^1.7.4"
  safety = "^1.10.3"
  pytest-deadfixtures = "^2.2.1"
  isort = "^5.10.1"
  ipython = "^8.2.0"
  pytest-env = "^0.6.2"
  ipdb = "^0.13.9"
  mypy = "^0.942"
  asynctest = "^0.13.0"
  respx = "^0.19.2"
  pytest-xdist = "^2.5.0"
  freezegun = "^1.2.0"
  pypika = "^0.48.8"
  pytest-dotenv = "^0.5.2"
  pytest-socket = "^0.5.1"
  types-orjson = "^3.6.0"
  types-freezegun = "^1.1.9"
  nest-asyncio = "^1.5.5"
  pytest-celery = "^0.0.0"
  types-redis = "^4.1.21"
  pytest-vcr = "^1.0.2"
  pytest-freezegun = "^0.4.2"
  diff-cover = "^6.5.0"

[tool.black]
line-length = 79
target-version = [ "py38" ]
include = "\\.pyi?$"
exclude = """
(
  /(
      \\.eggs         # exclude a few common directories in the
    | \\.git          # root of the project
    | \\.hg
    | \\.mypy_cache
    | \\.tox
    | \\.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | version
  )
)
"""

[tool.isort]
line_length = 79
known_first_party = "src"
known_third_party = "fastapi,structlog"
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
skip_glob = [ "**migrations**" ]

[tool.coverage.report]
precision = 2


[build-system]
requires = [ "poetry>=1.1.8" ]
build-backend = "poetry.masonry.api"